Service
- implemented authorization & authentication,
- simplified http response handling
