# internal/models/common.go
@@ -6,39 +6,12 @@ import (
 	"github.com/go-chi/render"
 )
 
-type ErrResponse struct {
-	Err            error `json:"-"`
-	HTTPStatusCode int   `json:"-"`
-
-	ErrorText string `json:"error,omitempty"`
-}
-
-func (e *ErrResponse) Render(w http.ResponseWriter, r *http.Request) error {
-	render.Status(r, e.HTTPStatusCode)
-	return nil
-}
-
-func ErrRender(err error, status int) render.Renderer {
-	return &ErrResponse{
-		Err:            err,
-		HTTPStatusCode: status,
-
-		ErrorText: err.Error(),
-	}
-}
-
 type NewEntityResponse struct {
 	Id int64 `json:"id"`
 }
 
 func (e *NewEntityResponse) Render(w http.ResponseWriter, r *http.Request) error {
 	render.Status(r, http.StatusCreated)
-	return nil
-}
-
-type SuccessResponse struct{}
-
-func (e *SuccessResponse) Render(w http.ResponseWriter, r *http.Request) error {
 	return nil
 }
 
